update Auth resources
